--- a/rock-paper.html
+++ b/rock-paper.html
@@ -13,7 +13,7 @@
     <button class="same-button" onclick="calculateComputerMove('paper');
     "><img src="D:\Dinesh\21701A0532\Images\paper-emoji.png" width="50px" height="50px"></button>
     <button class="same-button" onclick="calculateComputerMove('scissors');
-    "><img src="/Images/scissors-emoji.png" width="50px" height="50px"></button>
+    "><img src="Images/scissors-emoji.png" width="50px" height="50px"></button>
     <p class="result-passage"></p>
     <p class="result"></p>
     <p class="score-message"></p>
@@ -22,5 +22,5 @@
 
 
 </body>
-<script src="D:\Dinesh\21701A0532\Rock-Paper-Scissor\rock-paper.js"></script>
+<script src="rock-paper.js"></script>
 </html>
