--- a/rock-paper.html
+++ b/rock-paper.html
@@ -9,9 +9,9 @@
 <body>
     <p class="game-heading">Rock Paper Scissors</p>
     <button class="same-button" onclick="calculateComputerMove('rock');
-    "><img src="D:\Dinesh\21701A0532\Images\rock-emoji.png" height="50px" width="50px"></button> 
+    "><img src="Images/rock-emoji.png" height="50px" width="50px"></button> 
     <button class="same-button" onclick="calculateComputerMove('paper');
-    "><img src="D:\Dinesh\21701A0532\Images\paper-emoji.png" width="50px" height="50px"></button>
+    "><img src="Images/paper-emoji.png" width="50px" height="50px"></button>
     <button class="same-button" onclick="calculateComputerMove('scissors');
     "><img src="Images/scissors-emoji.png" width="50px" height="50px"></button>
     <p class="result-passage"></p>
